# a-http-server

./: .gitignore  CLAUDE.md  README.md  mini-httpd.cabal
app/: Main.hs
docs/superpowers/plans/: 2026-06-11-mini-httpd-plan.md
docs/superpowers/specs/: 2026-06-11-mini-httpd-design.md
public/: index.html
src/: Server.hs
test/: Spec.hs
