cabal-version: 3.0
name:           mini-httpd
version:        0.1.0.0
synopsis:       A secure mini HTTP server for static files
license:        MIT
author:         simon
build-type:     Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
                 -Wmissing-export-lists -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Server
    hs-source-dirs:   src
    build-depends:
        base        >=4.14 && <5,
        wai         >=3.2  && <4,
        http-types  >=0.12 && <0.13,
        mime-types  >=0.1  && <0.2,
        directory   >=1.3  && <2,
        filepath    >=1.4  && <2,
        bytestring  >=0.10 && <0.13,
        text
    default-language: Haskell2010

executable mini-httpd
    import:           warnings
    ghc-options:      -threaded
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base,
        mini-httpd,
        warp        >=3.3  && <4,
        wai         >=3.2  && <4,
        directory   >=1.3  && <2,
        filepath    >=1.4  && <2
    default-language: Haskell2010

test-suite mini-httpd-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base,
        mini-httpd,
        hspec        >=2.10 && <3,
        wai          >=3.2  && <4,
        http-types,
        bytestring,
        directory,
        filepath,
        temporary
    default-language: Haskell2010
